[gd_scene load_steps=7 format=3 uid="uid://cjbekul01iach"]

[ext_resource type="Script" path="res://Scripts/blue_ship.gd" id="1_2dsm0"]
[ext_resource type="Texture2D" uid="uid://cnep1umono3ew" path="res://Spritesheet/sheet.png" id="1_ftb40"]
[ext_resource type="Texture2D" uid="uid://dendrdqwm8ght" path="res://Spritesheet/blueship.png" id="3_ghqk7"]
[ext_resource type="AudioStream" uid="uid://clg8o8mio2s5p" path="res://Music and sounds/laser-14792.mp3" id="4_8fhpp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_088ax"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eubwk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ghqk7")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"iframes",
"speed": 5.0
}]

[node name="blue_ship" type="CharacterBody2D"]
script = ExtResource("1_2dsm0")

[node name="Guns" type="Marker2D" parent="."]
position = Vector2(105, 88)

[node name="Guns2" type="Marker2D" parent="."]
position = Vector2(110, 86)
rotation = 0.349066

[node name="Guns3" type="Marker2D" parent="."]
position = Vector2(100, 86)
rotation = -0.349066

[node name="player_diameter" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player_diameter"]
polygon = PackedVector2Array(99, 103, 110, 103, 117, 123, 161, 144, 142, 175, 123, 169, 116, 179, 89, 179, 86, 172, 67, 176, 48, 144, 91, 122)

[node name="DamagePolygon" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(100, 106, 109, 106, 113, 129, 152, 146, 138, 167, 120, 163, 111, 169, 94, 172, 88, 167, 71, 168, 59, 146, 94, 129)

[node name="Iframe_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Blue_ship_sprite" type="Sprite2D" parent="."]
position = Vector2(105, 140)
texture = ExtResource("1_ftb40")
region_enabled = true
region_rect = Rect2(112, 792, 112, 74)

[node name="Iframe_Animation" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_088ax")
position = Vector2(105, 140)
sprite_frames = SubResource("SpriteFrames_eubwk")
animation = &"iframes"
frame_progress = 0.0866883

[node name="Shoot_SE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8fhpp")

[connection signal="area_entered" from="player_diameter" to="." method="_on_player_diameter_area_entered"]
[connection signal="body_entered" from="player_diameter" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Iframe_Timer" to="." method="_on_timer_timeout"]
